Added markdown details

--- a/IMDB Movies database(Part 3).ipynb
+++ b/IMDB Movies database(Part 3).ipynb
@@ -6,7 +6,31 @@
    "metadata": {},
    "source": [
     "# Oscar Dominguez\n",
-    "# IMDB Movies database(Part 3)"
+    "# IMDB Movies database(Part 3)\n",
+    "**Specifications - Database**\n",
+    "\n",
+    "**Your stakeholder wants you to take the data you have been cleaning and collecting in Parts 1 & 2 of the project, and wants you to create a MySQL database for them.**\n",
+    "\n",
+    "**Specifically, they want the data from the following files included in your database:**\n",
+    "- Title Basics:\n",
+    "    - Movie ID (tconst)\n",
+    "    - Primary Title\n",
+    "    - Start Year\n",
+    "    - Runtime (in Minutes)\n",
+    "    - Genres\n",
+    "- Title Ratings\n",
+    "    - Movie ID (tconst)\n",
+    "    - Average Movie Rating\n",
+    "    - Number of Votes\n",
+    "- The TMDB API Results (multiple files)\n",
+    "    - Movie ID\n",
+    "    - Revenue\n",
+    "    - Budget\n",
+    "    - Certification (MPAA Rating)\n",
+    "- You should normalize the tables as best you can before adding them to your new database.\n",
+    "\n",
+    "    - Note: an important exception to their request is that they would like you to keep all of the data from the TMDB API in 1 table together (even though it will not be perfectly normalized).\n",
+    "    - You only need to keep the imdb_id, revenue, budget, and certification columns"
    ]
   },
   {
@@ -1390,6 +1414,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8f8b0c4",
+   "metadata": {},
+   "source": [
+    "## Dropping columns form basics dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "bc48cd93",
@@ -1559,6 +1591,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0da3d570",
+   "metadata": {},
+   "source": [
+    "## Dropping columns form tmdb_data dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "42a14ed6",
@@ -1707,7 +1747,8 @@
    "id": "789d7210",
    "metadata": {},
    "source": [
-    "# Saving the MySQL tables with tconst as the primary key."
+    "# Saving the MySQL tables and setting primary keys\n",
+    "## Saving dataframes to database"
    ]
   },
   {
@@ -1755,28 +1796,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "9011b3e5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x13e28f550>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Setting primary key\n",
-    "engine.execute('ALTER TABLE title_basics ADD PRIMARY KEY (`tconst`);')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "id": "e8f95f7f",
    "metadata": {},
@@ -1815,28 +1834,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7e688bf4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x13e267b50>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Setting primary key\n",
-    "engine.execute('ALTER TABLE title_ratings ADD PRIMARY KEY (`tconst`);')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "id": "49cbcbdb",
    "metadata": {},
@@ -1857,6 +1854,58 @@
     "tmdb_data.to_sql('tmdb_data',engine,dtype=df_schema,if_exists='replace',index=False)\n",
     "title_genres.to_sql('title_genres',engine,dtype=df_schema,if_exists='replace',index=False)\n",
     "genres.to_sql('genres',engine,dtype=df_schema,if_exists='replace',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aa77a62",
+   "metadata": {},
+   "source": [
+    "## Setting primary keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9011b3e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x13e28f550>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting primary key\n",
+    "engine.execute('ALTER TABLE title_basics ADD PRIMARY KEY (`tconst`);')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7e688bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x13e267b50>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting primary key\n",
+    "engine.execute('ALTER TABLE title_ratings ADD PRIMARY KEY (`tconst`);')"
    ]
   },
   {
@@ -2428,7 +2477,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
