Set primary keys for genres and tmdb_data, deleted rows in tmdb_data dataframe where 'imdb_id' column equal '0'

--- a/IMDB Movies database(Part 3).ipynb
+++ b/IMDB Movies database(Part 3).ipynb
@@ -1760,6 +1760,7 @@
    "source": [
     "## Example\n",
     "from sqlalchemy.types import *\n",
+    "## Creating df_schema's to set primary keys's that are not integers\n",
     "## Calculate max string lengths for object columns\n",
     "key_len = basics['tconst'].fillna('').map(len).max()\n",
     "title_len = basics['primaryTitle'].fillna('').map(len).max()\n",
@@ -1796,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e8f95f7f",
    "metadata": {},
    "outputs": [],
@@ -1812,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "86d6c491",
    "metadata": {},
    "outputs": [
@@ -1822,7 +1823,7 @@
        "497608"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,14 +1835,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "6070bae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Creating df_schema's to set primary keys's that are not integers\n",
+    "## Calculate max string lengths for object columns\n",
+    "key_len = tmdb_data['imdb_id'].fillna('').map(len).max()\n",
+    "## Create a schema dictonary using Sqlalchemy datatype objects\n",
+    "df_schema = {\n",
+    "    \"imdb_id\": String(key_len+1),\n",
+    "    'revenue':Float(),\n",
+    "    \"budget\": Float(),\n",
+    "    \"certification\": String(key_len+1)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6d9b09ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>certification</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0113026</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10000000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0113092</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0116391</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0118694</td>\n",
+       "      <td>12854953.0</td>\n",
+       "      <td>150000.0</td>\n",
+       "      <td>PG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tt0118852</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>R</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     imdb_id     revenue      budget certification\n",
+       "1  tt0113026         0.0  10000000.0           NaN\n",
+       "2  tt0113092         0.0         0.0           NaN\n",
+       "3  tt0116391         0.0         0.0           NaN\n",
+       "4  tt0118694  12854953.0    150000.0            PG\n",
+       "5  tt0118852         0.0         0.0             R"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We needed to drop rows that equal to zero because there you get an error if you don't.\n",
+    "# There was more than one imdb_id with a zero preventing us from setting it as a primary key.\n",
+    "\n",
+    "tmdb_data = tmdb_data[tmdb_data['imdb_id'] != '0']\n",
+    "tmdb_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
-   "id": "49cbcbdb",
+   "id": "ecd50118",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26"
+       "2565"
       ]
      },
      "execution_count": 23,
@@ -1851,9 +1965,29 @@
    ],
    "source": [
     "# Saving dataframes to sql with dtype and index=False\n",
-    "tmdb_data.to_sql('tmdb_data',engine,dtype=df_schema,if_exists='replace',index=False)\n",
-    "title_genres.to_sql('title_genres',engine,dtype=df_schema,if_exists='replace',index=False)\n",
-    "genres.to_sql('genres',engine,dtype=df_schema,if_exists='replace',index=False)"
+    "tmdb_data.to_sql('tmdb_data',engine,dtype=df_schema,if_exists='replace',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "49cbcbdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "153049"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Saving dataframes to sql with dtype and index=False\n",
+    "title_genres.to_sql('title_genres',engine,dtype=df_schema,if_exists='replace',index=False)"
    ]
   },
   {
@@ -1866,17 +2000,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
+   "id": "adcbef56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Set the dataframe index and use index=True \n",
+    "# Setting primary key for genres while creating table in to database \n",
+    "# since primary key is an integer.\n",
+    "genres.set_index('Genre_ID').to_sql('genres',engine,if_exists='replace',index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "9011b3e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x13e28f550>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1422bc700>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1888,17 +2046,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "7e688bf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x13e267b50>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1240f1ca0>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,6 +2064,28 @@
    "source": [
     "# Setting primary key\n",
     "engine.execute('ALTER TABLE title_ratings ADD PRIMARY KEY (`tconst`);')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e63cf6d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1098dacd0>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting primary key\n",
+    "engine.execute('ALTER TABLE tmdb_data ADD PRIMARY KEY (`imdb_id`);')"
    ]
   },
   {
@@ -1918,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "08b57c0f",
    "metadata": {},
    "outputs": [
@@ -1943,50 +2123,50 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Genre_name</th>\n",
        "      <th>Genre_ID</th>\n",
+       "      <th>Genre_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Action</td>\n",
        "      <td>0</td>\n",
+       "      <td>Action</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Adult</td>\n",
        "      <td>1</td>\n",
+       "      <td>Adult</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Adventure</td>\n",
        "      <td>2</td>\n",
+       "      <td>Adventure</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Animation</td>\n",
        "      <td>3</td>\n",
+       "      <td>Animation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Biography</td>\n",
        "      <td>4</td>\n",
+       "      <td>Biography</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Genre_name  Genre_ID\n",
-       "0     Action         0\n",
-       "1      Adult         1\n",
-       "2  Adventure         2\n",
-       "3  Animation         3\n",
-       "4  Biography         4"
+       "   Genre_ID Genre_name\n",
+       "0         0     Action\n",
+       "1         1      Adult\n",
+       "2         2  Adventure\n",
+       "3         3  Animation\n",
+       "4         4  Biography"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "d501434f",
    "metadata": {},
    "outputs": [
@@ -2092,7 +2272,7 @@
        "4    None             126  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "1fc53c0d",
    "metadata": {},
    "outputs": [
@@ -2173,7 +2353,7 @@
        "4  tt0069049         7"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2186,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "a9a4b9a9",
    "metadata": {},
    "outputs": [
@@ -2260,7 +2440,7 @@
        "4  tt0000007            5.4       817"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2273,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "956b87c0",
    "metadata": {},
    "outputs": [
@@ -2307,10 +2487,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
+       "      <td>tt0035423</td>\n",
+       "      <td>76019000.0</td>\n",
+       "      <td>48000000.0</td>\n",
+       "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2328,17 +2508,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>tt0116391</td>\n",
+       "      <td>tt0114447</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>tt0118694</td>\n",
-       "      <td>12854953.0</td>\n",
-       "      <td>150000.0</td>\n",
-       "      <td>PG</td>\n",
+       "      <td>tt0116391</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2346,14 +2526,14 @@
       ],
       "text/plain": [
        "     imdb_id     revenue      budget certification\n",
-       "0          0         NaN         NaN          None\n",
+       "0  tt0035423  76019000.0  48000000.0         PG-13\n",
        "1  tt0113026         0.0  10000000.0          None\n",
        "2  tt0113092         0.0         0.0          None\n",
-       "3  tt0116391         0.0         0.0          None\n",
-       "4  tt0118694  12854953.0    150000.0            PG"
+       "3  tt0114447         0.0         0.0          None\n",
+       "4  tt0116391         0.0         0.0          None"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2374,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "469d5b13",
    "metadata": {},
    "outputs": [
@@ -2436,7 +2616,7 @@
        "4        tmdb_data"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
