Created Part 4 notebook and 3 tests, retrieved API data from 2010-2019

--- a/IMDB Movies database(Part 3).ipynb
+++ b/IMDB Movies database(Part 3).ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "5e385dca",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
        "4             126                   Drama  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
     "\n",
     "# Open saved file and preview \n",
     "basics = pd.read_csv(\"Data/title_basics_cleaned.csv.gz\", low_memory = False)\n",
-    "basics.head()\n"
+    "basics.head()"
    ]
   },
   {
@@ -1970,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "49cbcbdb",
    "metadata": {},
    "outputs": [
@@ -1980,7 +1980,7 @@
        "153049"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2000,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "adcbef56",
    "metadata": {},
    "outputs": [
@@ -2010,7 +2010,7 @@
        "26"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2024,17 +2024,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "9011b3e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1422bc700>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1596bd460>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2046,17 +2046,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "7e688bf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1240f1ca0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1596ae8e0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2068,17 +2068,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "e63cf6d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1098dacd0>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x105f77d60>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2098,7 +2098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "08b57c0f",
    "metadata": {},
    "outputs": [
@@ -2166,7 +2166,7 @@
        "4         4  Biography"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2179,7 +2179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "d501434f",
    "metadata": {},
    "outputs": [
@@ -2272,7 +2272,7 @@
        "4    None             126  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2285,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "1fc53c0d",
    "metadata": {},
    "outputs": [
@@ -2353,7 +2353,7 @@
        "4  tt0069049         7"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2366,7 +2366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "a9a4b9a9",
    "metadata": {},
    "outputs": [
@@ -2440,7 +2440,7 @@
        "4  tt0000007            5.4       817"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2453,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "956b87c0",
    "metadata": {},
    "outputs": [
@@ -2533,7 +2533,7 @@
        "4  tt0116391         0.0         0.0          None"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2554,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "469d5b13",
    "metadata": {},
    "outputs": [
@@ -2616,7 +2616,7 @@
        "4        tmdb_data"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
