--- a/IMDB Movies database(Part 2).ipynb
+++ b/IMDB Movies database(Part 2).ipynb
@@ -14,7 +14,18 @@
    "execution_count": 1,
    "id": "620d26bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['api-key'])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "with open('/Users/hibye/.secret/tmdb_api.json', 'r') as f:\n",
@@ -69,7 +80,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Matrix',\n",
        " 'overview': 'Set in the 22nd century, The Matrix tells the story of a computer hacker who joins a group of underground insurgents fighting the vast and powerful computers who now rule the earth.',\n",
-       " 'popularity': 63.476,\n",
+       " 'popularity': 60.918,\n",
        " 'poster_path': '/f89U3ADr1oiB1s9GkdPOEpXUk5H.jpg',\n",
        " 'production_companies': [{'id': 79,\n",
        "   'logo_path': '/tpFpsqbleCzEE2p5EgvUq6ozfCA.png',\n",
@@ -80,7 +91,7 @@
        "   'name': 'Groucho II Film Partnership',\n",
        "   'origin_country': ''},\n",
        "  {'id': 1885,\n",
-       "   'logo_path': '/tXMFoE8AtNdnFzWOW0aCLwl7xxS.png',\n",
+       "   'logo_path': '/xlvoOZr4s1PygosrwZyolIFe5xs.png',\n",
        "   'name': 'Silver Pictures',\n",
        "   'origin_country': 'US'},\n",
        "  {'id': 174,\n",
@@ -99,8 +110,8 @@
        " 'tagline': 'Welcome to the Real World.',\n",
        " 'title': 'The Matrix',\n",
        " 'video': False,\n",
-       " 'vote_average': 8.2,\n",
-       " 'vote_count': 23136}"
+       " 'vote_average': 8.202,\n",
+       " 'vote_count': 23185}"
       ]
      },
      "execution_count": 4,
@@ -482,10 +493,7 @@
       "text/plain": [
        "{'adult': False,\n",
        " 'backdrop_path': '/9ns9463dwOeo1CK1JU2wirL5Yi1.jpg',\n",
-       " 'belongs_to_collection': {'id': 1118731,\n",
-       "  'name': 'Tom and Jerry Collection',\n",
-       "  'poster_path': '/nhWQxhlO2Lipei66wmlxte1bo4S.jpg',\n",
-       "  'backdrop_path': None},\n",
+       " 'belongs_to_collection': None,\n",
        " 'budget': 50000000,\n",
        " 'genres': [{'id': 35, 'name': 'Comedy'},\n",
        "  {'id': 10751, 'name': 'Family'},\n",
@@ -496,7 +504,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'Tom & Jerry',\n",
        " 'overview': 'Tom the cat and Jerry the mouse get kicked out of their home and relocate to a fancy New York hotel, where a scrappy employee named Kayla will lose her job if she can’t evict Jerry before a high-class wedding at the hotel. Her solution? Hiring Tom to get rid of the pesky mouse.',\n",
-       " 'popularity': 67.027,\n",
+       " 'popularity': 53.005,\n",
        " 'poster_path': '/8XZI9QZ7Pm3fVkigWJPbrXCMzjq.jpg',\n",
        " 'production_companies': [{'id': 25120,\n",
        "   'logo_path': '/lqUpBvDLQYG3QaKNpe2lxfpgh36.png',\n",
@@ -526,8 +534,8 @@
        " 'tagline': 'Best of enemies. Worst of friends.',\n",
        " 'title': 'Tom & Jerry',\n",
        " 'video': False,\n",
-       " 'vote_average': 6.896,\n",
-       " 'vote_count': 2214,\n",
+       " 'vote_average': 6.9,\n",
+       " 'vote_count': 2217,\n",
        " 'certification': 'PG'}"
       ]
      },
@@ -575,7 +583,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Avengers',\n",
        " 'overview': 'When an unexpected enemy emerges and threatens global safety and security, Nick Fury, director of the international peacekeeping agency known as S.H.I.E.L.D., finds himself in need of a team to pull the world back from the brink of disaster. Spanning the globe, a daring recruitment effort begins!',\n",
-       " 'popularity': 136.787,\n",
+       " 'popularity': 100.452,\n",
        " 'poster_path': '/RYMX2wcKCBAr24UyPD7xwmjaTn.jpg',\n",
        " 'production_companies': [{'id': 420,\n",
        "   'logo_path': '/hUzeosd33nzE5MCNsZxCGEKTXaQ.png',\n",
@@ -595,8 +603,8 @@
        " 'tagline': 'Some assembly required.',\n",
        " 'title': 'The Avengers',\n",
        " 'video': False,\n",
-       " 'vote_average': 7.7,\n",
-       " 'vote_count': 28540,\n",
+       " 'vote_average': 7.708,\n",
+       " 'vote_count': 28582,\n",
        " 'certification': 'PG-13'}"
       ]
      },
@@ -634,7 +642,7 @@
        " 'original_language': 'en',\n",
        " 'original_title': 'The Avengers',\n",
        " 'overview': 'When an unexpected enemy emerges and threatens global safety and security, Nick Fury, director of the international peacekeeping agency known as S.H.I.E.L.D., finds himself in need of a team to pull the world back from the brink of disaster. Spanning the globe, a daring recruitment effort begins!',\n",
-       " 'popularity': 136.787,\n",
+       " 'popularity': 100.452,\n",
        " 'poster_path': '/RYMX2wcKCBAr24UyPD7xwmjaTn.jpg',\n",
        " 'production_companies': [{'id': 420,\n",
        "   'logo_path': '/hUzeosd33nzE5MCNsZxCGEKTXaQ.png',\n",
@@ -654,8 +662,8 @@
        " 'tagline': 'Some assembly required.',\n",
        " 'title': 'The Avengers',\n",
        " 'video': False,\n",
-       " 'vote_average': 7.7,\n",
-       " 'vote_count': 28540,\n",
+       " 'vote_average': 7.708,\n",
+       " 'vote_count': 28582,\n",
        " 'certification': 'PG-13'}"
       ]
      },
@@ -740,8 +748,8 @@
        "      <td>Some assembly required.</td>\n",
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
-       "      <td>7.700</td>\n",
-       "      <td>28540</td>\n",
+       "      <td>7.708</td>\n",
+       "      <td>28582</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -764,8 +772,8 @@
        "      <td>Some assembly required.</td>\n",
        "      <td>The Avengers</td>\n",
        "      <td>False</td>\n",
-       "      <td>7.700</td>\n",
-       "      <td>28540</td>\n",
+       "      <td>7.708</td>\n",
+       "      <td>28582</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -789,7 +797,7 @@
        "      <td>The Notebook</td>\n",
        "      <td>False</td>\n",
        "      <td>7.878</td>\n",
-       "      <td>10303</td>\n",
+       "      <td>10326</td>\n",
        "      <td>PG-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -834,9 +842,9 @@
        "2  Behind every great love is a great story.  The Notebook  False   \n",
        "\n",
        "   vote_average vote_count certification  \n",
-       "0         7.700      28540         PG-13  \n",
-       "1         7.700      28540         PG-13  \n",
-       "2         7.878      10303         PG-13  \n",
+       "0         7.708      28582         PG-13  \n",
+       "1         7.708      28582         PG-13  \n",
+       "2         7.878      10326         PG-13  \n",
        "\n",
        "[3 rows x 26 columns]"
       ]
@@ -903,12 +911,23 @@
     {
      "data": {
       "text/plain": [
-       "['title_basics_cleaned.csv.gz',\n",
+       "['tmdb_api_results_2010.json',\n",
+       " 'title_basics_cleaned.csv.gz',\n",
+       " 'tmdb_api_results_2011.json',\n",
        " 'title_ratings_cleaned.csv.gz',\n",
+       " 'title_imdb.csv.gz',\n",
+       " 'tmdb_api_results_2000.json',\n",
+       " 'final_tmdb_data_2000.csv.gz',\n",
+       " 'final_tmdb_data_2012.csv.gz',\n",
+       " 'tmdb_api_results_2001.json',\n",
+       " 'final_tmdb_data_2010.csv.gz',\n",
        " 'title_basics.csv.gz',\n",
+       " 'final_tmdb_data_2001.csv.gz',\n",
        " '.ipynb_checkpoints',\n",
+       " 'tmdb_api_results_2012.json',\n",
        " 'title_akas.csv.gz',\n",
        " 'title_akas_us_cleaned.csv.gz',\n",
+       " 'final_tmdb_data_2011.csv.gz',\n",
        " 'title_ratings.csv.gz']"
       ]
      },
@@ -958,7 +977,7 @@
    "outputs": [],
    "source": [
     "#YEARS_TO_GET = [2000,2001]\n",
-    "YEARS_TO_GET = [2000, 2001]\n"
+    "YEARS_TO_GET = [2013, 2014, 2015, 2016, 2017, 2018, 2019]\n"
    ]
   },
   {
@@ -973,139 +992,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "6b5980ad",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tconst</th>\n",
-       "      <th>titleType</th>\n",
-       "      <th>primaryTitle</th>\n",
-       "      <th>originalTitle</th>\n",
-       "      <th>isAdult</th>\n",
-       "      <th>startYear</th>\n",
-       "      <th>endYear</th>\n",
-       "      <th>runtimeMinutes</th>\n",
-       "      <th>genres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>tt0035423</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Kate &amp; Leopold</td>\n",
-       "      <td>Kate &amp; Leopold</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2001.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>118</td>\n",
-       "      <td>Comedy,Fantasy,Romance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tt0062336</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>The Tango of the Widower and Its Distorting Mi...</td>\n",
-       "      <td>El tango del viudo y su espejo deformante</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>70</td>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>tt0069049</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>The Other Side of the Wind</td>\n",
-       "      <td>The Other Side of the Wind</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2018.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>122</td>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>tt0088751</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>The Naked Monster</td>\n",
-       "      <td>The Naked Monster</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Comedy,Horror,Sci-Fi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>tt0096056</td>\n",
-       "      <td>movie</td>\n",
-       "      <td>Crime and Punishment</td>\n",
-       "      <td>Crime and Punishment</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2002.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>126</td>\n",
-       "      <td>Drama</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      tconst titleType                                       primaryTitle  \\\n",
-       "0  tt0035423     movie                                     Kate & Leopold   \n",
-       "1  tt0062336     movie  The Tango of the Widower and Its Distorting Mi...   \n",
-       "2  tt0069049     movie                         The Other Side of the Wind   \n",
-       "3  tt0088751     movie                                  The Naked Monster   \n",
-       "4  tt0096056     movie                               Crime and Punishment   \n",
-       "\n",
-       "                               originalTitle  isAdult  startYear  endYear  \\\n",
-       "0                             Kate & Leopold        0     2001.0      NaN   \n",
-       "1  El tango del viudo y su espejo deformante        0     2020.0      NaN   \n",
-       "2                 The Other Side of the Wind        0     2018.0      NaN   \n",
-       "3                          The Naked Monster        0     2005.0      NaN   \n",
-       "4                       Crime and Punishment        0     2002.0      NaN   \n",
-       "\n",
-       "   runtimeMinutes                  genres  \n",
-       "0             118  Comedy,Fantasy,Romance  \n",
-       "1              70                   Drama  \n",
-       "2             122                   Drama  \n",
-       "3             100    Comedy,Horror,Sci-Fi  \n",
-       "4             126                   Drama  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 81693 entries, 0 to 81692\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   tconst          81693 non-null  object \n",
+      " 1   titleType       81693 non-null  object \n",
+      " 2   primaryTitle    81693 non-null  object \n",
+      " 3   originalTitle   81693 non-null  object \n",
+      " 4   isAdult         81693 non-null  int64  \n",
+      " 5   startYear       81693 non-null  float64\n",
+      " 6   endYear         0 non-null      float64\n",
+      " 7   runtimeMinutes  81693 non-null  int64  \n",
+      " 8   genres          81693 non-null  object \n",
+      "dtypes: float64(2), int64(2), object(5)\n",
+      "memory usage: 5.6+ MB\n"
+     ]
     }
    ],
    "source": [
     "# Load in the dataframe from project part 1 as basics:\n",
     "basics = pd.read_csv('Data/title_basics_cleaned.csv.gz')\n",
-    "basics.head()"
+    "basics.head()\n",
+    "basics.info()"
    ]
   },
   {
@@ -1117,12 +1035,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1a4cac3759424101bb3513f16435d744",
+       "model_id": "6cae10a8367c4c62a8477ca1204307df",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "YEARS:   0%|          | 0/2 [00:00<?, ?it/s]"
+       "YEARS:   0%|          | 0/7 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1131,12 +1049,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "562929abde1447689c0f645a87dc8011",
+       "model_id": "f122d2eabb54407794b5a6cd1e70edba",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2000:   0%|          | 0/1448 [00:00<?, ?it/s]"
+       "Movies from 2013:   0%|          | 0/4702 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -1145,12 +1063,82 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "652d9449239547f1bc781b9d308518a3",
+       "model_id": "1e378e18614743408d88e58173ef5db9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Movies from 2001:   0%|          | 0/1569 [00:00<?, ?it/s]"
+       "Movies from 2014:   0%|          | 0/4902 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "93983e6ba0c64f4594c788f800e2b27a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2015:   0%|          | 0/5055 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b110cc5d93c498bbb7bc93278549797",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2016:   0%|          | 0/5253 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a76ce5020e74fe8aaa2d0e50215381a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2017:   0%|          | 0/5644 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f51872279a3c4b538d24d1dd74e293d3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2018:   0%|          | 0/5773 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e5d6db74c15a43b697f75ab51808e1e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Movies from 2019:   0%|          | 0/5871 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
